tests/wsf/fail/hash_in_prints.wsf
"string#with hash" prints
end
